@@ -12,7 +12,7 @@ AS=		0a
 ASFLAGS=
 
 CC=		0c
-CFLAGS=		-w -I$ROOT/Inferno/spim/include -I$ROOT/include
+CFLAGS=		-w -I$ROOT/Inferno/$OBJTYPE/include -I$ROOT/Inferno/include -I$ROOT/include
 ANSICPP= -p
 
 LD=		0l
